Update to support groovy 3.x and java 17